--- a/assets/css/public.css
+++ b/assets/css/public.css
@@ -98,6 +98,34 @@
   padding-left: 20px;
 }
 
+.contact-info {
+  padding: 20px;
+  color: #333;
+  font-family: 'Arial', sans-serif;
+}
+
+.contact-info h2 {
+  font-size: 24px;
+  margin-bottom: 10px;
+  color: #111;
+}
+
+.contact-info p {
+  font-size: 16px;
+  margin-bottom: 15px;
+  line-height: 1.5;
+}
+
+.contact-info ul {
+  list-style: none;
+  padding: 0;
+}
+
+.contact-info li {
+  margin-bottom: 8px;
+}
+
+
 /* Responsividade */
 @media (max-width: 768px) {
   .wjm-contact-form {
